Agrego nuevo html (login)

--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,8 @@
         </div>
       </div>
   
-      <button class="navbar__button">
-        Login
+      <button class="navbar__button" href="login">
+        <a href="login.html">Login</a>
       </button>
      </nav>
 
@@ -285,44 +285,7 @@
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-
-    
-    <script src="js/carrusel.js">
-      // $(document).ready(function(){
-      //   $('.your-class').slick({
-      //     dots: true,
-      //     infinite: false,
-      //     speed: 300,
-      //     slidesToShow: 6,
-      //     slidesToScroll: 5,
-      //     responsive: [
-      //       {
-      //         breakpoint: 1024,
-      //         settings: {
-      //           slidesToShow: 4,
-      //           slidesToScroll: 3,
-      //           infinite: true,
-      //           dots: true
-      //         }
-      //       },
-      //       {
-      //         breakpoint: 768,
-      //         settings: {
-      //           slidesToShow: 4,
-      //           slidesToScroll: 4
-      //         }
-      //       },
-      //       {
-      //         breakpoint: 480,
-      //         settings: {
-      //           slidesToShow: 2,
-      //           slidesToScroll: 2
-      //         }
-      //       }
-      //     ]   
-      //   });
-      // });
-    </script>
+    <script src="js/carrusel.js"></script>
    
 </body>
 </html>
